syntax = "proto3";

package squirrel.workspaces.v1;

import "common.proto";

service WorkspacesService {
  rpc List(ListWorkspacesRequest) returns (ListWorkspacesResponse);
  rpc Create(CreateWorkspaceRequest) returns (squirrel.common.v1.Workspace);
  rpc Get(GetWorkspaceRequest) returns (squirrel.common.v1.Workspace);
}

message ListWorkspacesRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message ListWorkspacesResponse {
  repeated squirrel.common.v1.Workspace items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 pageSize = 4;
}

message CreateWorkspaceRequest {
  string name = 1;
  string slug = 2;
}

message GetWorkspaceRequest {
  string workspaceId = 1;
}
